--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
